# pFLEX

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: getting-started.md  index.md  installation.md  user-guide.md
src/pflex/: __init__.py  analysis.py  logging_config.py  old_functions.py  plotting.py  preprocessing.py  utils.py
src/pflex/data/example_input/: skin_cell_lines_corum_genes.parquet  soft_tissue_cell_lines_corum_genes.parquet
src/pflex/examples/: basic_usage.py
